# issun

./: .dockerignore  .gitignore  AGENT.md  ARCHITECTURE.md  Cargo.toml  LICENSE-APACHE  Makefile  README.md  docker-compose.yml
crates/issun/: Cargo.toml
crates/issun-analyzer/: Cargo.toml  README.md
crates/issun-analyzer/examples/: analyze_combat.rs  analyze_hooks.rs  analyze_plugins.rs  analyze_systems.rs  basic.rs  generate_combined_flow.rs  generate_event_flow.rs  generate_hook_flow.rs  validate_event_flow.rs
crates/issun-analyzer/src/: analyzer.rs  error.rs  event_extractor.rs  graph_generator.rs  hook_extractor.rs  lib.rs  plugin_extractor.rs  system_extractor.rs  types.rs  validator.rs
crates/issun-bevy/: Cargo.toml
crates/issun-bevy/docs/: LINT_CANDIDATES.md
crates/issun-bevy/docs/design/: accounting-plugin.md  action-plugin.md  combat-plugin.md  metrics-plugin.md  modding-system.md  plugin-macro-integration.md  save-load-plugin.md  time-plugin.md
crates/issun-bevy/src/: lib.rs
crates/issun-bevy/src/plugins/: mod.rs
crates/issun-bevy/tests/: action_integration.rs  lints.rs  modding.rs  scripting.rs  test_helpers.rs
crates/issun-bevy/tests/fixtures/: test_mod.ron
crates/issun-cli/: Cargo.toml  README.md
crates/issun-cli/src/: config.rs  error.rs  main.rs
crates/issun-cli/src/commands/: analyze.rs  mod.rs
crates/issun-core/: Cargo.toml
crates/issun-core/docs/mechanics/: evolution.md
crates/issun-core/src/: lib.rs  prelude.rs
crates/issun-core/src/mechanics/: execution.rs  mod.rs
crates/issun-macros/: Cargo.toml
crates/issun-macros/src/: bevy.rs  lib.rs
crates/issun-macros/src/bevy/: entity.rs  log.rs  plugin.rs  query.rs
crates/issun-mod-rhai/: Cargo.toml
crates/issun-mod-rhai/src/: lib.rs
crates/issun-mod-rhai/tests/: e2e_event_system.rs
crates/issun-mod-wasm/: Cargo.toml  build.rs
crates/issun-mod-wasm/src/: lib.rs
crates/issun-mod-wasm/wit/: issun.wit
crates/issun-server/: Cargo.toml  Dockerfile
crates/issun-server/src/: config.rs  connection.rs  http_server.rs  main.rs  metrics.rs  relay.rs  room.rs
crates/issun/examples/: drive_macro_demo.rs  hello_issun.rs
crates/issun/src/: asset.rs  builder.rs  command.rs  context.rs  entity.rs  error.rs  event.rs  lib.rs  plugin.rs  resources.rs  scene.rs  service.rs  state.rs  store.rs  system.rs
crates/issun/src/engine/: game_loop.rs  headless_runner.rs  input.rs  mod.rs  mod_bridge_system.rs  rng.rs  runner.rs
crates/issun/src/modding/: control.rs  error.rs  event_system.rs  events.rs  loader.rs  mod.rs  plugin.rs  tests.rs
crates/issun/src/network/: backend.rs  mod.rs  types.rs
crates/issun/src/plugin/: README.md  combat.rs  mod.rs
crates/issun/src/replay/: mod.rs  recorder.rs  replayer.rs  types.rs
crates/issun/src/scene/: director.rs  mod.rs
crates/issun/src/storage/: json_repository.rs  mod.rs  repository.rs  ron_repository.rs  save_data.rs
crates/issun/src/trace/: generator.rs  macros.rs  mod.rs  tracer.rs  types.rs
crates/issun/src/ui/: ascii_art.rs  input.rs  layer.rs  macros.rs  mod.rs  resource_guard.rs  theme.rs  title_screen.rs
crates/issun/tests/: auto_pump_test.rs  culture_plugin_integration.rs  event_bus_integration.rs  event_replay_integration.rs  event_tracer_integration.rs  mod_publish_event_test.rs  mod_subscribe_event_test.rs  mod_system_e2e.rs  network_integration.rs  org_suite_integration.rs  plugin_derive_test.rs  plugin_macro_test.rs  worldmap_basic.rs
deploy/: README.md
examples/basic-wasm-mod/: Cargo.toml  README.md
examples/basic-wasm-mod/src/: lib.rs
examples/border-economy/: Cargo.toml
examples/border-economy/src/: events.rs  hooks.rs  main.rs
examples/border-economy/src/models/: context.rs  game_scene.rs  ids.rs  mod.rs  vault.rs
examples/border-economy/src/plugins/: economy.rs  faction.rs  market_share.rs  mod.rs  reputation.rs  territory.rs  vault.rs  weapon_prototype.rs
examples/border-economy/src/ui/: mod.rs
examples/garden-sim/: Cargo.toml  README.md
examples/garden-sim/src/: event_log.rs  garden.rs  main.rs  scene.rs  ui.rs
examples/garden-sim/src/hooks/: entropy.rs  generation.rs  mod.rs
examples/garden-sim/src/models/: mod.rs  plant.rs
examples/headless-request/: Cargo.toml  README.md
examples/headless-request/src/: main.rs
examples/multiplayer-pong/: Cargo.toml  README.md
examples/multiplayer-pong/src/: main.rs
examples/my-new-game/: Cargo.toml  README.md  template.toml
examples/my-new-game/src/models/: game_context.rs  mod.rs  ping_pong.rs
examples/my-new-game/src/ui/: title.rs
examples/pandemic-crisis/: Cargo.toml  README.md
examples/pandemic-crisis/src/: disease.rs  display.rs  events.rs  game_rules.rs  main.rs  player.rs  ui.rs  world.rs
examples/rpg-arena/: Cargo.toml  README.md
examples/rpg-arena/mods/: debug_mode.rhai  easy_mode.rhai  hard_mode.rhai
examples/rpg-arena/src/: arena.rs  combat_state.rs  fighter.rs  item.rs  main.rs  ui.rs
examples/rpg-arena/tests/: e2e_mod_system.rs
examples/simple-bevy-plugin-test/: Cargo.toml
examples/simple-bevy-plugin-test/src/: main.rs  test_messages.rs  test_phase22.rs  test_phase23.rs  test_skip.rs
examples/whispers-of-plague/: Cargo.toml  DESIGN_V2.md  PHASE1_STATUS.md  README.md
examples/whispers-of-plague-bevy/: Cargo.toml  README.md
examples/whispers-of-plague-bevy-v2/: Cargo.toml
examples/whispers-of-plague-bevy-v2/src/: components.rs  main.rs  plugins.rs  states.rs  systems.rs  ui.rs
examples/whispers-of-plague-bevy/src/: components.rs  main.rs  plugins.rs  resources.rs  systems.rs  ui.rs
examples/whispers-of-plague/src/: main.rs
examples/whispers-of-plague/src/hooks/: mod.rs  plague_contagion.rs  plague_rumor.rs
examples/whispers-of-plague/src/models/: context.rs  game_scene.rs  mod.rs  resources.rs  topology.rs
examples/whispers-of-plague/src/plugins/: mod.rs  plague.rs  win_condition.rs
examples/whispers-of-plague/src/services/: mod.rs  rumor.rs  virus.rs  win_condition.rs
examples/whispers-of-plague/src/systems/: mod.rs  turn.rs
examples/whispers-of-plague/src/ui/: components.rs  mod.rs
(+694 files in other folders)
