[workspace]
members = [
    "crates/issun",
    "crates/issun-macros",
    "crates/issun-server",
    "crates/issun-analyzer",
    "crates/issun-cli",
]
exclude = [
    "examples/*",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"
authors = ["Yutaka Nishimura <ytk.nishimura@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ynishi/issun"
homepage = "https://github.com/ynishi/issun"
documentation = "https://docs.rs/issun"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ron = "0.8"
bincode = "1.3"

# UI
ratatui = "0.28"
crossterm = "0.28"

# Utilities
rand = "0.8"
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }

# ECS
hecs = "0.10"
rayon = "1.8"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Networking
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.0"

# Proc macros
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

# Title screen
figlet-rs = "0.1"
