[package]
name = "issun-analyzer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
# AST parsing
syn = { workspace = true, features = ["visit"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]

[lib]
path = "src/lib.rs"
