[package]
name = "issun-bevy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "ISSUN plugins for Bevy ECS"
keywords = ["bevy", "game", "plugin", "ecs"]
categories = ["game-engines"]

[lib]
doctest = false

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_state",
    "multi_threaded",
    "bevy_log",
    "bevy_scene",
    "bevy_asset",
    "file_watcher",
] }
issun-core = { path = "../issun-core", version = "0.10.0" }
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
notify = "6.0"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
rand = "0.8"
fastrand = "2.0"
tracing = "0.1"
moonshine-save = "0.6"

[dev-dependencies]
syn = { version = "2.0", features = ["full", "visit"] }
walkdir = "2.4"
quote = "1.0"
tempfile = "3.0"
