[package]
name = "issun-cli"
version = "0.5.0"
edition = "2021"
authors = ["ISSUN Contributors"]
description = "Command-line interface for ISSUN game framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ynishi/issun"
homepage = "https://github.com/ynishi/issun"
documentation = "https://docs.rs/issun"

[[bin]]
name = "issun"
path = "src/main.rs"

[dependencies]
issun-analyzer = { path = "../issun-analyzer", version = "0.8.0" }
clap = { version = "4.5", features = ["derive", "cargo"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
