[package]
name = "issun-server"
description = "issun server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[dependencies]
# QUIC protocol
quinn = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }

# Serialization
bincode = { workspace = true }
serde = { workspace = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
dotenvy = "0.15"

# Random number generation
rand = "0.8"

# Metrics
prometheus = "0.13"
axum = "0.7"

# Issun core types
issun = { version = "0.10.0", path = "../issun", features = ["network"] }
