[package]
name = "issun"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "A mini game engine for logic-focused games - Build games in ISSUN (一寸) of time"
keywords = ["game", "engine", "roguelike", "tui", "mini-game"]
categories = ["game-engines", "command-line-interface"]

[dependencies]
# Re-export macros
issun-macros = { path = "../issun-macros", version = "0.3.0" }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
bincode = { workspace = true, optional = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
figlet-rs = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
quinn = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["ui", "storage"]
ui = []           # TUI support
storage = []      # Save/Load support
network = ["quinn", "rustls", "bincode"]  # Network support
full = ["ui", "storage", "network"]
tty_tests = []    # Enable TTY-dependent tests
