[package]
name = "issun"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "A mini game engine for logic-focused games - Build games in ISSUN (一寸) of time"
keywords = ["game", "engine", "roguelike", "tui", "mini-game"]
categories = ["game-engines", "command-line-interface"]

[dependencies]
# Re-export macros
issun-macros = { path = "../issun-macros", version = "0.10.0" }
issun-core = { path = "../issun-core", version = "0.10.0" }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
ron = { workspace = true }
bincode = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
figlet-rs = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
hecs = { workspace = true }
rayon = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
quinn = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }

# MOD system (optional backends)
# Note: Backend crates are independent and not dependencies of issun core
# Users import them separately (e.g., `use issun_mod_rhai::RhaiLoader`)
# issun-mod-rhai = { path = "../issun-mod-rhai", version = "0.1.0", optional = true }
# issun-mod-wasm = { path = "../issun-mod-wasm", version = "0.1.0", optional = true }

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["ui", "storage"]
ui = []           # TUI support
storage = []      # Save/Load support
network = ["quinn", "rustls"]  # Network support
# MOD system features (backends are separate crates, not features)
full = ["ui", "storage", "network"]
tty_tests = []    # Enable TTY-dependent tests
