[package]
name = "basic-wasm-mod"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Required for Wasm

[dependencies]
wit-bindgen = "0.33.0"

# For JSON serialization in custom functions
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = "s"  # Optimize for size
lto = true       # Link-time optimization
