[package]
name = "garden-sim"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
issun = { path = "../../crates/issun" }
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
hecs = "0.10"
async-trait = "0.1"
