[package]
name = "headless-request"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
issun = { path = "../../crates/issun", default-features = false, features = ["storage"] }
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
