[package]
name = "multiplayer-pong"
version = "0.1.0"
edition = "2021"

# This is a standalone example, not part of the workspace
[workspace]

[dependencies]
issun = { path = "../../crates/issun", features = ["network"] }
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
