[workspace]

[package]
name = "rpg-arena"
version = "0.1.0"
edition = "2021"

[dependencies]
issun = { path = "../../crates/issun" }
issun-mod-rhai = { path = "../../crates/issun-mod-rhai" }
tokio = { version = "1.42", features = ["full"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
