[package]
name = "simple-bevy-plugin-test"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
bevy = { version = "0.17", default-features = false, features = ["bevy_state"] }
issun-bevy = { path = "../../crates/issun-bevy" }
issun-macros = { path = "../../crates/issun-macros" }
serde = { version = "1.0", features = ["derive"] }
