[package]
name = "whispers-of-plague-bevy"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_state",
    "multi_threaded",
] }
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
thiserror = "1"
